--- a/style.css
+++ b/style.css
@@ -17,10 +17,10 @@ footer{
     border-top: 1px solid grey;
 }
 
-#nome-usuário{
-    font-weight: bold;
-}
+#nome-usuário { 
+    font-weight: bold; 
+ }
 
-.texto-style{
+ .texto-inglês{ 
     font-style: italic;
-}
+  }
